<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" android:text="@string/hw"/>
<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:text="@string/serach"></TextView>
<EditText android:id="@+id/editText1" android:layout_height="wrap_content" android:layout_width="match_parent" android:singleLine="true">
    <requestFocus></requestFocus>
</EditText>
<Button android:text="@string/find_related_links" android:id="@+id/button1" android:layout_width="66dp" android:layout_height="wrap_content" android:onClick="goSearch"></Button>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent" android:layout_height="wrap_content">
<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button2" android:text="@string/nsearch" android:clickable="true" android:onClick="onClickNewsButton"></Button>
<Button android:text="@string/Images" android:id="@+id/button3" android:layout_width="86dp" android:layout_height="wrap_content" android:onClick="onClickButton"></Button>
<Button android:layout_height="wrap_content" android:text="@string/Twitter" android:layout_width="wrap_content" android:onClick="fetchTweets" android:id="@+id/button4"></Button>
</LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button5" android:text="@string/Wiki" android:onClick="wiki"></Button>
<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button6" android:text="@string/Youtube" android:onClick="youtube"></Button>
<Button android:text="@string/Facebook" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/button7" android:onClick="facebook_feed"></Button>
</LinearLayout>
</LinearLayout>
